--- a/Go Parks/View/Base.lproj/Main.storyboard
+++ b/Go Parks/View/Base.lproj/Main.storyboard
@@ -377,7 +377,7 @@
                         <outlet property="temperatureLabel" destination="4eL-4l-eHg" id="Fxf-3e-d3B"/>
                         <outlet property="weatherActivity" destination="18l-fE-G69" id="7Ab-wL-yye"/>
                         <outlet property="weatherIcon" destination="bEB-8O-IUS" id="vsy-ws-ePr"/>
-                        <segue destination="yt4-ko-K7L" kind="presentation" identifier="openUrl" id="8mG-m2-GlE"/>
+                        <segue destination="yt4-ko-K7L" kind="presentation" identifier="openUrl" modalTransitionStyle="crossDissolve" id="8mG-m2-GlE"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0vE-Iq-fSP" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -402,10 +402,14 @@
                                 <rect key="frame" x="0.0" y="20" width="414" height="716"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <gestureRecognizers/>
                                 <wkWebViewConfiguration key="configuration">
                                     <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                     <wkPreferences key="preferences"/>
                                 </wkWebViewConfiguration>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="MXe-wJ-9eQ" appends="YES" id="k8v-ji-wft"/>
+                                </connections>
                             </wkWebView>
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="mTU-eL-HiN">
                                 <rect key="frame" x="189" y="350" width="37" height="37"/>
@@ -437,6 +441,12 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RJU-1H-J8g" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <screenEdgePanGestureRecognizer minimumNumberOfTouches="1" id="MXe-wJ-9eQ">
+                    <rectEdge key="edges" left="YES"/>
+                    <connections>
+                        <action selector="edgeGesture:" destination="yt4-ko-K7L" id="sEv-vd-Pb5"/>
+                    </connections>
+                </screenEdgePanGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="6215.9420289855079" y="132.88043478260872"/>
         </scene>
