Adjust Welcome Screen constraints for iPad

--- a/Go Parks/View/Base.lproj/LaunchScreen.storyboard
+++ b/Go Parks/View/Base.lproj/LaunchScreen.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,14 +15,14 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backColor" translatesAutoresizingMaskIntoConstraints="NO" id="Yde-ah-FIz">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchLogo" translatesAutoresizingMaskIntoConstraints="NO" id="XP6-hJ-fzm">
-                                <rect key="frame" x="87" y="258.5" width="200" height="150"/>
+                                <rect key="frame" x="87.666666666666686" y="331" width="200" height="150"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="150" id="LGe-hb-SD3"/>
                                     <constraint firstAttribute="width" constant="200" id="oDU-Ey-30D"/>
@@ -35,7 +35,7 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Yde-ah-FIz" secondAttribute="trailing" id="5rG-2u-0h2"/>
                             <constraint firstItem="Yde-ah-FIz" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="8AQ-65-oYP"/>
                             <constraint firstItem="XP6-hJ-fzm" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="de5-rk-z7N"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Yde-ah-FIz" secondAttribute="bottom" id="kWh-ne-CS6"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Yde-ah-FIz" secondAttribute="bottom" constant="-34" id="kWh-ne-CS6"/>
                             <constraint firstItem="XP6-hJ-fzm" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="lWs-nf-1zZ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -43,11 +43,11 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="52" y="374.66266866566718"/>
+            <point key="canvasLocation" x="52" y="374.6305418719212"/>
         </scene>
     </scenes>
     <resources>
-        <image name="backColor" width="187" height="406"/>
-        <image name="launchLogo" width="268" height="200"/>
+        <image name="backColor" width="1024" height="1024"/>
+        <image name="launchLogo" width="171" height="128"/>
     </resources>
 </document>
