--- a/Go Parks/View/Base.lproj/Main.storyboard
+++ b/Go Parks/View/Base.lproj/Main.storyboard
@@ -914,13 +914,17 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="dG6-SI-Vsr" secondAttribute="height" multiplier="67:40" id="3M3-5W-ikK"/>
-                                    <constraint firstItem="X7Y-bn-S00" firstAttribute="leading" secondItem="dG6-SI-Vsr" secondAttribute="leading" constant="25" id="4Lv-uT-X8L"/>
+                                    <constraint firstItem="X7Y-bn-S00" firstAttribute="leading" secondItem="dG6-SI-Vsr" secondAttribute="leading" constant="25" id="4Lv-uT-X8L">
+                                        <variation key="heightClass=regular-widthClass=regular" constant="40"/>
+                                    </constraint>
                                     <constraint firstItem="qQq-Z8-5Iu" firstAttribute="leading" secondItem="dG6-SI-Vsr" secondAttribute="leading" constant="25" id="9TS-jK-smU">
                                         <variation key="heightClass=regular-widthClass=regular" constant="40"/>
                                     </constraint>
                                     <constraint firstAttribute="trailing" secondItem="AMC-vc-D7x" secondAttribute="trailing" id="GSs-pB-dTH"/>
                                     <constraint firstItem="eqK-oH-vrz" firstAttribute="leading" secondItem="X3N-qE-o8L" secondAttribute="trailing" constant="5" id="H9A-Dk-qmo"/>
-                                    <constraint firstAttribute="trailing" secondItem="eqK-oH-vrz" secondAttribute="trailing" constant="25" id="HUJ-j7-uWa"/>
+                                    <constraint firstAttribute="trailing" secondItem="eqK-oH-vrz" secondAttribute="trailing" constant="25" id="HUJ-j7-uWa">
+                                        <variation key="heightClass=regular-widthClass=regular" constant="40"/>
+                                    </constraint>
                                     <constraint firstItem="X3N-qE-o8L" firstAttribute="top" secondItem="dG6-SI-Vsr" secondAttribute="top" constant="15" id="JuW-bH-6w5">
                                         <variation key="heightClass=regular-widthClass=regular" constant="40"/>
                                     </constraint>
@@ -935,7 +939,9 @@
                                     <constraint firstAttribute="bottom" secondItem="AMC-vc-D7x" secondAttribute="bottom" constant="15" id="kUa-UQ-hjq">
                                         <variation key="heightClass=regular-widthClass=regular" constant="40"/>
                                     </constraint>
-                                    <constraint firstAttribute="trailing" secondItem="X7Y-bn-S00" secondAttribute="trailing" constant="25" id="nGF-Lg-Rkh"/>
+                                    <constraint firstAttribute="trailing" secondItem="X7Y-bn-S00" secondAttribute="trailing" constant="25" id="nGF-Lg-Rkh">
+                                        <variation key="heightClass=regular-widthClass=regular" constant="40"/>
+                                    </constraint>
                                     <constraint firstItem="AMC-vc-D7x" firstAttribute="top" secondItem="qQq-Z8-5Iu" secondAttribute="bottom" constant="15" id="nGa-n1-tL3"/>
                                     <constraint firstItem="qQq-Z8-5Iu" firstAttribute="top" secondItem="X7Y-bn-S00" secondAttribute="bottom" constant="10" id="qCf-sn-Tme"/>
                                     <constraint firstItem="X7Y-bn-S00" firstAttribute="top" secondItem="X3N-qE-o8L" secondAttribute="bottom" constant="1" id="rrw-1b-MYE"/>
